--- a/docs/stories/4.5.plan-data-table.md
+++ b/docs/stories/4.5.plan-data-table.md
@@ -1,7 +1,7 @@
 # Story 4.5: Plan Data Table & Filtering
 
 ## Status
-Draft
+Ready for Development
 
 ## Story
 **As a** user,
@@ -61,27 +61,105 @@ Draft
 
 ## Dev Notes
 
+### Prerequisites (Dependencies)
+- ✅ Story 2.1: Database Schema (plans table) - **DONE**
+- ✅ Story 1.4: Data Normalization (plan types) - **DONE**
+- ✅ Story 2.4: Unified Data Collection (scraped data available) - **DONE**
+
 ### Source Tree
+- Plan table page: `src/app/dashboard/plans/page.tsx` (new route)
 - Plan table component: `src/components/dashboard/PlanTable.tsx`
-- Database schema: Story 2.1 (`plans` table with DISTINCT ON pattern)
+- Plan fetching utility: `src/lib/dashboard/plans.ts` (to be created)
 - Plan types: `src/types/plan.ts` (from Story 1.4)
+- Database schema: `migrations/001_initial_schema.sql` (from Story 2.1)
 
 ### Technical Stack
 - React Client Component for interactivity (sorting, filtering)
-- Tailwind CSS for styling
-- Client-side filtering and sorting (consider server-side if performance issues)
-- Database query with DISTINCT ON for latest data
+- Next.js App Router with `/dashboard/plans` route
+- Server Component for initial data fetch
+- Tailwind CSS for styling and responsive design
+- Lucide React icons for sort indicators
+
+### Database Query Pattern
+
+**Fetch Latest Plans Only** (AC: 5):
+```sql
+SELECT DISTINCT ON (source, plan_key)
+  id, source, plan_key, scrape_timestamp, plan_data
+FROM plans
+ORDER BY source, plan_key, scrape_timestamp DESC;
+```
+
+This ensures only the latest version of each plan is shown (not historical duplicates from previous scrapes).
+
+### Implementation Approach
+
+1. **Create Plans Route**: `/dashboard/plans`
+   - Server Component page that fetches latest plans
+   - Passes data to Client Component for interactivity
+
+2. **Build Table Component**: `PlanTable.tsx`
+   - Client Component with state for sorting and filtering
+   - Columns: Source, Price, Data, Contract, Extras
+   - Sortable headers with up/down arrow indicators
+   - Filter controls above table
+
+3. **Sorting Logic** (Client-Side):
+   - Store sort column and direction in state
+   - Click column header to toggle sort
+   - Visual indicator (arrows) for active sort column
+
+4. **Filtering Logic** (Client-Side):
+   - Source filter: Multi-select checkboxes or dropdown
+   - Price range: Min/max number inputs
+   - Filter applied on client-side for responsiveness
+   - Consider server-side filtering if performance issues arise
+
+5. **Pagination**:
+   - Show pagination if `plans.length > 100`
+   - Display 100 plans per page
+   - Page controls: Previous, Next, page numbers
+   - Track current page in state
+
+6. **Responsive Design**:
+   - Desktop: Full table view
+   - Mobile/Tablet: Horizontal scroll with `overflow-x-auto`
+   - Tailwind responsive utilities
+
+### Data Structure
+
+Plan data from database (JSONB):
+```typescript
+{
+  source: string;        // e.g., 'o2', 'vodafone'
+  price: number;         // Normalized price (GBP/mo)
+  data: string;          // e.g., '10GB', 'Unlimited'
+  contract: string;      // e.g., '30-day', '12-month'
+  extras: string;        // Comma-separated extras
+  plan_key: string;      // Unique identifier for deduplication
+  scrape_timestamp: Date;
+}
+```
 
 ### Testing
-- Test file location: `tests/integration/components/dashboard/PlanTable.test.tsx` (to be created)
-- Test framework: Jest + React Testing Library
-- Test sorting, filtering, pagination
+- Test file location: `src/components/dashboard/__tests__/PlanTable.test.tsx` (to be created)
+- Test framework: Vitest + React Testing Library
+- Test scenarios:
+  - Table rendering with plan data
+  - Column sorting (ascending/descending)
+  - Source filtering (single/multiple sources)
+  - Price range filtering (min, max, both)
+  - Pagination controls (next, previous, page numbers)
+  - Empty state when no plans match filters
+  - Loading state display
+  - Responsive horizontal scroll
 
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
 | 2025-01-XX | 1.0 | Story extracted from PRD | Architect |
+| 2025-11-19 | 2.0 | Prepared for development - dependencies verified, implementation approach defined | PM (John) |
 
 ## Dev Agent Record
 
