--- a/docs/stories/4.6.trigger-scrape-dashboard.md
+++ b/docs/stories/4.6.trigger-scrape-dashboard.md
@@ -1,7 +1,7 @@
 # Story 4.6: Trigger Scrape from Dashboard (Manual/Cron)
 
 ## Status
-Draft
+Ready for Development
 
 ## Story
 **As a** user,
@@ -52,34 +52,136 @@ Draft
 
 ## Dev Notes
 
+### Prerequisites (Dependencies)
+- ✅ Story 2.1: Database Schema (plans table, scrape_timestamp) - **DONE**
+- ✅ Story 2.4: Unified Data Collection (npm run scrape command) - **DONE**
+- ✅ Story 4.2: Dashboard Home Screen (freshness indicator logic) - **DONE**
+
 ### Source Tree
-- Dashboard page: `src/app/dashboard/page.tsx` (from Story 4.2)
-- Scraping script: `src/scripts/scrape.ts` (from Story 2.4)
-- Database schema: Story 2.1 (`plans` table)
+- Dashboard page: `src/app/dashboard/page.tsx` (from Story 4.2 - enhance existing)
 - Refresh instructions component: `src/components/dashboard/RefreshInstructions.tsx` (to be created)
+- Scraping script: `src/scripts/scrape.ts` (from Story 2.4 - already exists)
+- Scrape status utility: `src/lib/dashboard/scrape-status.ts` (from Story 4.2 - reuse)
 
 ### Technical Stack
-- React components for UI display
-- Clipboard API for copy-to-clipboard functionality
-- Database queries for scrape timestamp
-- Manual command execution (no API endpoint needed)
-- Optional: Cron setup documentation
+- React Client Component for clipboard functionality
+- Clipboard API (`navigator.clipboard.writeText()`)
+- Tailwind CSS for styling
+- Lucide React icons for UI elements
+- Database query for scrape timestamp (reuse Story 4.2 logic)
 
-### MVP Implementation Note
-This story avoids creating a `/api/scrape` endpoint to sidestep serverless timeout issues (scraping takes 10+ minutes). Instead, users run scraping manually via `npm run scrape:all` or set up a cron job for automated scheduling. This is simpler, more reliable, and avoids job queue infrastructure for MVP.
+### MVP Implementation Strategy
 
-### Future Enhancement
-Post-MVP, consider adding job queue (BullMQ, Inngest) for in-dashboard scrape triggering with progress updates.
+**Why Manual Command Execution:**
+- Scraping takes 10+ minutes (all 8 collectors)
+- Serverless functions have 10-second timeout (Vercel Free tier)
+- Serverless functions have 60-second max timeout (Vercel Pro tier)
+- API-triggered scraping would timeout before completion
+- Job queue infrastructure (BullMQ, Inngest) adds complexity for MVP
+
+**Manual Approach Benefits:**
+- Simple and reliable (no timeout issues)
+- Easy to set up automated scheduling via cron
+- User has full control over scraping schedule
+- No additional infrastructure needed
+
+### Implementation Approach
+
+1. **Enhance Dashboard Page** (Story 4.2):
+   - Add RefreshInstructions component below ScrapeStatus
+   - Reuse existing scrape status query
+
+2. **Build RefreshInstructions Component**:
+   - Display "Refresh Data" card/section
+   - Show command: `npm run scrape` (or `npm run scrape:all` if aliased)
+   - Add copy-to-clipboard button with icon
+   - Show success toast/message after copy
+   - Include manual refresh note
+   - Optional: Link to cron setup docs
+
+3. **Clipboard Functionality**:
+   ```typescript
+   const copyCommand = async () => {
+     await navigator.clipboard.writeText('npm run scrape');
+     setShowSuccess(true);
+     setTimeout(() => setShowSuccess(false), 2000);
+   };
+   ```
+
+4. **Data Freshness Indicator**:
+   - Reuse `ScrapeStatus` component from Story 4.2
+   - Already displays green/yellow/red indicators
+   - Already calculates hours since last scrape
+   - No changes needed (already implemented)
+
+5. **Cron Setup Documentation** (Optional):
+   Create simple markdown doc: `docs/SCRAPING_SETUP.md`
+   ```markdown
+   ## Automated Scraping with Cron
+
+   To schedule automatic scraping every day at 2 AM:
+
+   1. Edit crontab: `crontab -e`
+   2. Add line: `0 2 * * * cd /path/to/project && npm run scrape >> /path/to/logs/scrape.log 2>&1`
+   3. Save and exit
+
+   Cron syntax: `minute hour day month weekday command`
+   ```
+
+### UI Design
+
+**Refresh Data Card**:
+```
+┌─────────────────────────────────────────────┐
+│ 🔄 Refresh Data                             │
+├─────────────────────────────────────────────┤
+│ To update plan data, run this command:      │
+│                                             │
+│  ┌────────────────────┬─────────────┐      │
+│  │ npm run scrape     │ [Copy] 📋  │      │
+│  └────────────────────┴─────────────┘      │
+│                                             │
+│ ℹ️ After scraping completes, refresh this   │
+│   page to see updated data.                │
+│                                             │
+│ 📚 Automate with cron (documentation)       │
+└─────────────────────────────────────────────┘
+```
 
 ### Testing
-- Test file location: `tests/unit/components/dashboard/RefreshInstructions.test.tsx` (to be created)
-- Test framework: Jest + React Testing Library
-- Test copy-to-clipboard, data display, freshness indicator
+- Test file location: `src/components/dashboard/__tests__/RefreshInstructions.test.tsx` (to be created)
+- Test framework: Vitest + React Testing Library
+- Test scenarios:
+  - Component rendering with command text
+  - Copy-to-clipboard button functionality
+  - Success message display after copy
+  - Clipboard API mocking
+  - Link to cron documentation (if added)
+  - Responsive layout
+
+### Post-MVP Enhancement Path
+
+For future versions, consider:
+1. **Job Queue Integration** (BullMQ or Inngest)
+   - Create `/api/scrape/trigger` endpoint
+   - Queue scraping job with progress tracking
+   - Display progress in dashboard
+   - Notification when complete
+
+2. **Webhook Integration**
+   - Trigger scraping via webhook from external scheduler
+   - GitHub Actions or external cron service
+
+3. **Background Jobs**
+   - Use Vercel Cron Jobs (Pro tier)
+   - Configure scheduled scraping in `vercel.json`
 
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
+| 2025-01-16 | 1.2 | Comprehensive Dev Notes: prerequisites, implementation approach, testing strategy | John |
+| 2025-01-16 | 1.1 | Status updated to Ready for Development, initial dev notes | John |
 | 2025-01-XX | 1.0 | Story extracted from PRD | Architect |
 
 ## Dev Agent Record
